--- a/sofa/gui/qt/BaseGenGraphForm.ui
+++ b/sofa/gui/qt/BaseGenGraphForm.ui
@@ -105,7 +105,7 @@
            <string>Generate PNG</string>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
          </widget>
         </item>
@@ -127,6 +127,9 @@
          <widget class="QCheckBox" name="genSVG">
           <property name="text">
            <string>Generate SVG</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -167,6 +170,11 @@
        <property name="duplicatesEnabled">
         <bool>false</bool>
        </property>
+       <item>
+        <property name="text">
+         <string>Overview</string>
+        </property>
+       </item>
        <item>
         <property name="text">
          <string>Full Graph</string>
@@ -292,7 +300,7 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="1">
+      <item row="9" column="1">
        <widget class="QCheckBox" name="showMechanicalMappings">
         <property name="text">
          <string>Mechanical Mappings</string>
@@ -312,7 +320,27 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
+      <item row="7" column="1">
+       <widget class="QCheckBox" name="showTopologyObjects">
+        <property name="text">
+         <string>Topology Objects</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="1">
+       <widget class="QCheckBox" name="showTopologicalMappings">
+        <property name="text">
+         <string>Topological Mappings</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
        <widget class="QCheckBox" name="showMappings">
         <property name="text">
          <string>Mappings</string>
@@ -322,7 +350,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="4" column="0">
        <widget class="QCheckBox" name="showCollisionModels">
         <property name="text">
          <string>Collision Models</string>
@@ -332,7 +360,7 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
+      <item row="5" column="0">
        <widget class="QCheckBox" name="showVisualModels">
         <property name="text">
          <string>Visual Models</string>
@@ -342,7 +370,7 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
+      <item row="10" column="0">
        <widget class="QCheckBox" name="showCollisionPipeline">
         <property name="text">
          <string>Collision Pipeline</string>
@@ -353,6 +381,26 @@
        </widget>
       </item>
       <item row="2" column="0">
+       <widget class="QCheckBox" name="showSlaves">
+        <property name="text">
+         <string>Slaves</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="1">
+       <widget class="QCheckBox" name="showOthers">
+        <property name="text">
+         <string>Others</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
        <widget class="QCheckBox" name="showBehaviorModels">
         <property name="text">
          <string>Behavior Models</string>
@@ -362,10 +410,30 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
+      <item row="7" column="0">
        <widget class="QCheckBox" name="showContext">
         <property name="text">
          <string>Context</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0">
+       <widget class="QCheckBox" name="showLoader">
+        <property name="text">
+         <string>Loader</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="0">
+       <widget class="QCheckBox" name="showEngine">
+        <property name="text">
+         <string>Engine</string>
         </property>
         <property name="checked">
          <bool>true</bool>
@@ -538,22 +606,28 @@
   <tabstop>genPS</tabstop>
   <tabstop>genFIG</tabstop>
   <tabstop>genSVG</tabstop>
+  <tabstop>showNodes</tabstop>
+  <tabstop>showObjects</tabstop>
+  <tabstop>showSlaves</tabstop>
+  <tabstop>showBehaviorModels</tabstop>
+  <tabstop>showCollisionModels</tabstop>
+  <tabstop>showVisualModels</tabstop>
+  <tabstop>showMappings</tabstop>
+  <tabstop>showContext</tabstop>
+  <tabstop>showEngine</tabstop>
+  <tabstop>showLoader</tabstop>
+  <tabstop>showCollisionPipeline</tabstop>
   <tabstop>showSolvers</tabstop>
   <tabstop>showMechanicalStates</tabstop>
   <tabstop>showForceFields</tabstop>
   <tabstop>showInteractionForceFields</tabstop>
   <tabstop>showConstraints</tabstop>
   <tabstop>showMass</tabstop>
-  <tabstop>showMechanicalMappings</tabstop>
   <tabstop>showTopology</tabstop>
-  <tabstop>showMappings</tabstop>
-  <tabstop>showCollisionModels</tabstop>
-  <tabstop>showVisualModels</tabstop>
-  <tabstop>showCollisionPipeline</tabstop>
-  <tabstop>showBehaviorModels</tabstop>
-  <tabstop>showContext</tabstop>
-  <tabstop>showObjects</tabstop>
-  <tabstop>showNodes</tabstop>
+  <tabstop>showTopologyObjects</tabstop>
+  <tabstop>showTopologicalMappings</tabstop>
+  <tabstop>showMechanicalMappings</tabstop>
+  <tabstop>showOthers</tabstop>
   <tabstop>labelNodeName</tabstop>
   <tabstop>labelNodeClass</tabstop>
   <tabstop>labelObjectName</tabstop>
@@ -646,7 +720,71 @@
   <connection>
    <sender>showObjects</sender>
    <signal>toggled(bool)</signal>
+   <receiver>showEngine</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showObjects</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>showLoader</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showObjects</sender>
+   <signal>toggled(bool)</signal>
    <receiver>showCollisionPipeline</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showObjects</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>showSlaves</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showObjects</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>showOthers</receiver>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -759,6 +897,38 @@
    <sender>showObjects</sender>
    <signal>toggled(bool)</signal>
    <receiver>showTopology</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showObjects</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>showTopologyObjects</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showObjects</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>showTopologicalMappings</receiver>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -932,7 +1102,71 @@
    </hints>
   </connection>
   <connection>
+   <sender>showEngine</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>presetFilter</receiver>
+   <slot>clearEditText()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showLoader</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>presetFilter</receiver>
+   <slot>clearEditText()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
    <sender>showCollisionPipeline</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>presetFilter</receiver>
+   <slot>clearEditText()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showSlaves</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>presetFilter</receiver>
+   <slot>clearEditText()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showOthers</sender>
    <signal>toggled(bool)</signal>
    <receiver>presetFilter</receiver>
    <slot>clearEditText()</slot>
@@ -1045,6 +1279,38 @@
   </connection>
   <connection>
    <sender>showTopology</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>presetFilter</receiver>
+   <slot>clearEditText()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showTopologyObjects</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>presetFilter</receiver>
+   <slot>clearEditText()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showTopologicalMappings</sender>
    <signal>toggled(bool)</signal>
    <receiver>presetFilter</receiver>
    <slot>clearEditText()</slot>
