--- a/sofa/gui/qt/BaseGenGraphForm.ui
+++ b/sofa/gui/qt/BaseGenGraphForm.ui
@@ -117,9 +117,9 @@
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="genFIG">
+         <widget class="QCheckBox" name="genPDF">
           <property name="text">
-           <string>Generate FIG</string>
+           <string>Generate PDF</string>
           </property>
          </widget>
         </item>
@@ -604,7 +604,7 @@
   <tabstop>layoutRadial</tabstop>
   <tabstop>genPNG</tabstop>
   <tabstop>genPS</tabstop>
-  <tabstop>genFIG</tabstop>
+  <tabstop>genPDF</tabstop>
   <tabstop>genSVG</tabstop>
   <tabstop>showNodes</tabstop>
   <tabstop>showObjects</tabstop>
