--- a/sofa/gui/qt/GUI.ui
+++ b/sofa/gui/qt/GUI.ui
@@ -575,6 +575,100 @@
           </widget>
          </widget>
         </item>
+        <item>
+         <layout class="QHBoxLayout">
+          <item>
+           <widget class="QLabel" name="dtLabel">
+            <property name="text">
+             <string>GUI Mode:</string>
+            </property>
+            <property name="wordWrap">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <layout class="QHBoxLayout">
+            <item>
+             <widget class="QPushButton" name="GUIMode0Button">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
+              <property name="toolTip">
+               <string>Disable the GUI</string>
+              </property>
+              <property name="text">
+               <string>0</string>
+              </property>
+              <property name="shortcut">
+               <string>Alt+0</string>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="GUIMode1Button">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
+              <property name="toolTip">
+               <string>Enable the full GUI</string>
+              </property>
+              <property name="text">
+               <string>1</string>
+              </property>
+              <property name="shortcut">
+               <string>Alt+1</string>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="GUIMode2Button">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
+              <property name="toolTip">
+               <string>GUI Mode 2</string>
+              </property>
+              <property name="text">
+               <string>2</string>
+              </property>
+              <property name="shortcut">
+               <string>Alt+2</string>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="GUIMode3Button">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
+              <property name="toolTip">
+               <string>GUI Mode 3</string>
+              </property>
+              <property name="text">
+               <string>3</string>
+              </property>
+              <property name="shortcut">
+               <string>Alt+3</string>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+         </layout>
+        </item>
        </layout>
       </widget>
      </widget>
