--- a/sofa/gui/qt/GUI.ui
+++ b/sofa/gui/qt/GUI.ui
@@ -54,7 +54,7 @@
        <layout class="QVBoxLayout">
         <item>
          <layout class="QGridLayout">
-          <item row="2" column="0">
+          <item row="2" column="1">
            <widget class="QPushButton" name="ResetViewButton">
             <property name="enabled">
              <bool>true</bool>
@@ -100,6 +100,39 @@
             </item>
            </layout>
           </item>
+          <item row="1" column="0">
+           <layout class="QHBoxLayout">
+            <item>
+             <widget class="QLabel" name="maxfpsLabel">
+              <property name="text">
+               <string>max FPS:</string>
+              </property>
+              <property name="wordWrap">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="maxfpsEdit">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>80</width>
+                <height>32767</height>
+               </size>
+              </property>
+              <property name="toolTip">
+               <string>If not zero, throttle the simulation to never run faster that the given frames per second</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
           <item row="0" column="0">
            <widget class="QPushButton" name="startButton">
             <property name="toolTip">
@@ -116,7 +149,7 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
+          <item row="3" column="1">
            <widget class="QPushButton" name="SaveViewButton">
             <property name="enabled">
              <bool>true</bool>
@@ -132,7 +165,7 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
+          <item row="2" column="0">
            <widget class="QPushButton" name="ResetSceneButton">
             <property name="enabled">
              <bool>true</bool>
@@ -164,7 +197,7 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0" colspan="2">
+          <item row="3" column="0">
            <widget class="QPushButton" name="screenshotButton">
             <property name="text">
              <string>Save S&amp;creenshot</string>
@@ -1110,13 +1143,14 @@
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>ResetViewButton</tabstop>
-  <tabstop>dtEdit</tabstop>
   <tabstop>startButton</tabstop>
-  <tabstop>SaveViewButton</tabstop>
-  <tabstop>ResetSceneButton</tabstop>
   <tabstop>stepButton</tabstop>
+  <tabstop>maxfpsEdit</tabstop>
+  <tabstop>dtEdit</tabstop>
+  <tabstop>ResetSceneButton</tabstop>
+  <tabstop>ResetViewButton</tabstop>
   <tabstop>screenshotButton</tabstop>
+  <tabstop>SaveViewButton</tabstop>
   <tabstop>tabs</tabstop>
   <tabstop>ExportGraphButton</tabstop>
   <tabstop>GraphFilter</tabstop>
