--- a/sofa/gui/qt/GUI.ui
+++ b/sofa/gui/qt/GUI.ui
@@ -611,7 +611,7 @@
         <item>
          <layout class="QHBoxLayout">
           <item>
-           <widget class="QLabel" name="dtLabel">
+           <widget class="QLabel" name="modeLabel">
             <property name="text">
              <string>GUI Mode:</string>
             </property>
