--- a/sofa/gui/qt/BaseGenGraphForm.ui
+++ b/sofa/gui/qt/BaseGenGraphForm.ui
@@ -49,6 +49,39 @@
        </property>
       </widget>
      </item>
+      <item row="2" column="0">
+        <widget class="QLabel" name="filenameLabel">
+          <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>1</horstretch>
+              <verstretch>0</verstretch>
+            </sizepolicy>
+          </property>
+          <property name="text">
+            <string>Graphviz bin directory</string>
+          </property>
+          <property name="wordWrap">
+            <bool>false</bool>
+          </property>
+          <property name="buddy">
+            <cstring>graphvizdir</cstring>
+          </property>
+        </widget>
+      </item>
+      <item row="2" column="1">
+        <widget class="QPushButton" name="browseGraphvizButton">
+          <property name="text">
+            <string>Browse...</string>
+          </property>
+        </widget>
+      </item>
+      <item row="3" column="0" colspan="2">
+        <widget class="QLineEdit" name="graphvizdir">
+          <property name="text">
+            <string></string>
+          </property>
+        </widget>
+      </item>
     </layout>
    </item>
    <item>
