--- a/sofa/gui/qt/GUI.ui
+++ b/sofa/gui/qt/GUI.ui
@@ -404,6 +404,19 @@
                  </property>
                 </widget>
                </item>
+                <item row="3" column="0">
+                  <widget class="QCheckBox" name="ActivatedCheckbox">
+                    <property name="toolTip">
+                      <string>Filter unactivate</string>
+                    </property>
+                    <property name="text">
+                      <string>Filter unactivate</string>
+                    </property>
+                    <property name="checked">
+                      <bool>true</bool>
+                    </property>
+                  </widget>
+                </item>
                <item row="0" column="0" colspan="3">
                 <widget class="QLabel" name="GraphFilterLabel">
                  <property name="sizePolicy">
